@@ -28,6 +28,7 @@ __all__ = [
     "get_point",
     "get_precision",
     "get_rings",
+    "get_segments",
     "get_srid",
     "get_type_id",
     "get_x",
@@ -1013,3 +1014,127 @@ def force_3d(geometry, z=0.0, **kwargs):
     if np.isnan(z).any():
         raise ValueError("It is not allowed to set the Z coordinate to NaN.")
     return lib.force_3d(geometry, z, **kwargs)
+
+
+@multithreading_enabled
+def get_segments(
+    geometry,
+    *,
+    include_z=False,
+    return_index=False,
+    **kwargs,
+):
+    """Get segments of each input linear geometry object.
+
+    Here 'segments' is defined as the individual pairwise coordinates
+    comprising a LineString or LinearRing. Multi* geometry objects are not supported.
+
+    Parameters
+    ----------
+    geometry : Geometry or array_like
+        A single linear object or collection of linear objects.
+    include_z : bool, default False
+        If True, return LINESTRING Z (3D) geometries.
+    return_index : bool, default False
+        If True, also return the index of each returned geometry as a separate
+        ndarray of integers.
+    **kwargs : dict
+        Keyword arguments to pass into ``shapely.linestrings()``.
+
+    Returns
+    -------
+    ndarray of constituent pairwise segments.
+
+    See Also
+    --------
+    get_parts, get_coordinates, linestrings
+
+    Examples
+    --------
+    >>> from shapely import get_segments
+    >>> from shapely import LineString, LinearRing
+
+    Return the 2 constituent pairwise segments of a 3-coordinate linestring.
+
+    >>> get_segments(LineString(([0, 0], [1, 1], [2, 2]))).tolist()
+    [<LINESTRING (0 0, 1 1)>, <LINESTRING (1 1, 2 2)>]
+
+    Return the 3 constituent pairwise segments of a 4-coordinate linearring.
+
+    >>> get_segments(LinearRing(([0, 0], [1, 1], [2, 2], [0,0]))).tolist()
+    [<LINESTRING (0 0, 1 1)>, <LINESTRING (1 1, 2 2)>, <LINESTRING (2 2, 0 0)>]
+
+    When ``return_index=True``, indexes are returned also:
+
+    >>> segments, index = get_segments(
+    ...      [
+    ...          LineString(([0, 0], [1, 1], [2, 2])),
+    ...          LinearRing(([0, 0], [1, 1], [2, 2], [0,0])),
+    ...      ],
+    ...      return_index=True,
+    ... )
+    >>> segments.tolist(), index.tolist()
+    ([<LINESTRING (0 0, 1 1)>,
+      <LINESTRING (1 1, 2 2)>,
+      <LINESTRING (0 0, 1 1)>,
+      <LINESTRING (1 1, 2 2)>,
+      <LINESTRING (2 2, 0 0)>],
+     [0, 0, 1, 1, 1])
+
+    By default the third dimension (Z) is ignored.
+
+    >>> get_segments(LineString(([0, 0, 1], [1, 1, 1], [2, 2, 1]))).tolist()
+    [<LINESTRING (0 0, 1 1)>, <LINESTRING (1 1, 2 2)>]
+    >>> get_segments(
+    ...     LineString(([0, 0, 1], [1, 1, 1], [2, 2, 1])), include_z=True,
+    ... ).tolist()
+    [<LINESTRING Z (0 0 1, 1 1 1)>, <LINESTRING Z (1 1 1, 2 2 1)>]
+
+    If geometries don't have a Z dimension, these values will be NaN.
+
+    >>> get_segments(LineString(([0, 0], [1, 1], [2, 2])), include_z=True).tolist()
+    [<LINESTRING Z (0 0 NaN, 1 1 NaN)>, <LINESTRING Z (1 1 NaN, 2 2 NaN)>]
+
+    """
+    geometry = np.asarray(geometry, dtype=np.object_)
+    geometry = np.atleast_1d(geometry)
+    if geometry.ndim != 1:
+        raise ValueError("Array should be one dimensional")
+
+    # Ensure valid geometry type
+    allowed_type_values = [
+        GeometryType.LINESTRING.value,
+        GeometryType.LINEARRING.value,
+        GeometryType.MISSING.value,
+    ]
+    valid_geometries = np.isin(get_type_id(geometry), allowed_type_values)
+    if not valid_geometries.all():
+        raise ValueError("Geometry type is not supported")
+
+    # Not currently supported for linestrings
+    include_m = False
+    # Always return index for get_coordinates()
+    xys, idx_coords = lib.get_coordinates(geometry, include_z, include_m, True)
+
+    # Create a mask for which coordinates are NOT the last in their group
+    # Last coordinate in each group has idx_coords[i] != idx_coords[i+1]
+    is_not_last = np.concatenate((idx_coords[:-1] == idx_coords[1:], [False]))
+
+    # Get indices of segment starts (all coords except last in each group)
+    segment_starts = np.where(is_not_last)[0]
+    segment_ends = segment_starts + 1
+
+    # Stack the segment coordinates: each segment is [start_point, end_point]
+    segment_coords = np.stack([xys[segment_starts], xys[segment_ends]], axis=1)
+
+    # 'allow' NaN linestrings
+    allow_nan = np.intc(0)
+    lines = lib.linestrings(segment_coords, allow_nan, **kwargs)
+
+    # Efficiently compute idx_lines from segment_starts
+    if return_index:
+        # Return the index location of the original input geometry
+        idx_lines = idx_coords[segment_starts]
+        return lines, idx_lines
+    else:
+        return lines
